# SplatNet3_Scraper

./: .coveragerc  .flake8  .gitattributes  .gitignore  .python-version  .readthedocs.yaml  .s3s_express_example  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  pyproject.toml  sonar-project.properties
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  main.yaml  main.yml  main_new.yml  on_merge.yml  pull_request.yaml  refresh_graphql_jsons.yml  refresh_webview_data.yml  sonarcloud.yaml
config/: .env.example
docs/: UPGRADE-2.0.0.md  conf.py
docs/assets/: login_flow.txt
docs/source/: conf.py  index.rst
docs/source/api/: utils.rst
docs/source/api/auth/: auth.rst
docs/source/api/query/: query.rst
docs/source/api/scraper/: scraper.rst
docs/source/misc/: contributing.rst  login_flow.rst  queries.rst  quickstart.rst  session_token.rst
examples/: x_rank_scraper.py
misc/: parse_api_values.py
reports/flake8/: flake8stats.txt
reports/junit/: junit.xml  report.html
s3s_express/: README.md  __init__.py  config.py  constants.py  graph_ql_queries.py  logs.py  nso.py  utils.py
s3s_express/base/: config.py  graph_ql_queries.py
s3s_express/base/tokens/: __init__.py  nso.py  token_manager.py
s3s_express/express/: __init__.py  config.py  express.py
s3s_express/tokens/: nso.py  token_manager.py
splatnet3_scraper/: __init__.py  constants.py  logs.py  splatnet3_webview_data.json  utils.py  weapons.py
splatnet3_scraper/auth/: __init__.py  environment_manager.py  graph_ql_queries.py  nso.py  token_manager.py
splatnet3_scraper/base/: exceptions.py  graph_ql_queries.py
splatnet3_scraper/base/tokens/: __init__.py  nso.py  token_manager.py
splatnet3_scraper/query/: __init__.py  config.py  handler.py  json_parser.py  main.py  query.py  responses.py
splatnet3_scraper/schemas/: __init__.py  base.py  battle.py  general.py  splatfest.py
splatnet3_scraper/schemas/overview/: base.py  coop.py  history_groups.py  history_groups_only_first.py
splatnet3_scraper/scraper/: __init__.py  config.py  json_parser.py  main.py  query_map.py  responses.py
src/splatnet3_scraper/: __init__.py  constants.py  splatnet3_webview_data.json  tournament_webview_data.json
src/splatnet3_scraper/auth/: __init__.py  exceptions.py  graph_ql_queries.py  nso.py  nxapi_client.py  token_manager.py
src/splatnet3_scraper/auth/tokens/: __init__.py  constructor.py  keychain.py  manager.py  regenerator.py  token_typing.py  tokens.py
src/splatnet3_scraper/query/: __init__.py  config.py  config_new.py  config_options.py  handler.py  handler_new.py  json_parser.py  responses.py
src/splatnet3_scraper/query/config/: __init__.py  callbacks.py  config.py  config_option.py  config_option_handler.py  config_options_new.py
src/splatnet3_scraper/query/config_new/: config_new.py  config_options_new.py
src/splatnet3_scraper/query/configuration/: __init__.py  callbacks.py  config.py  config_option.py  config_option_handler.py
src/splatnet3_scraper/scraper/: __init__.py  main.py  query_map.py
src/splatnet3_scraper/utils/: __init__.py  hash_data.py  json_helpers.py  retry.py
tests/: conftest.py  mock.py  test_graphql_queries.py  test_misc.py  test_nso.py  test_token_manager.py  test_utils.py
tests/auth/: test_environment_manager.py  test_graphql_queries.py  test_nso.py  test_nxapi_client.py  test_token_manager.py
tests/auth/tokens/: test_constructor.py  test_keychain.py  test_manager.py  test_regenerator.py  test_tokens.py
tests/base/: test_graphql_queries.py  test_nso.py  test_token_manager.py
tests/fixtures/: config.py  config_paths.py  constants.py  json.py  linear_json.csv  linear_json_with_commas.csv
tests/fixtures/config_files/: .all  .expected_all  .extra_tokens  .no_data  .no_tokens_section  .valid  .valid_with_ftoken  .valid_with_ftoken_list  s3sconfig.txt
tests/query/: test_config.py  test_config_options.py  test_json_parser.py  test_main.py  test_query.py  test_query_response.py  test_queryhandler.py
tests/query/configuration/: test_callbacks.py  test_config.py  test_config_option.py  test_config_option_handler.py
tests/scraper/: test_config.py  test_json_parser.py  test_main.py  test_query_map.py  test_query_response.py
