[project]
name = "splatnet3_scraper"
version = "2.0.2"
description = "Scraper for SplatNet 3 for Splatoon 3"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Cesar E Garza", email = "cesar@cegarza.com"}
]
dependencies = [
    "requests>=2.28.1",
]

[project.optional-dependencies]
parquet = ["pyarrow"]
examples = [
    "pandas>=1.5.3",
    "sqlalchemy>=2.0.1",
    "psycopg2>=2.9.5",
]
all = [
    "pyarrow",
    "pandas>=1.5.3",
    "sqlalchemy>=2.0.1",
    "psycopg2>=2.9.5",
]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "types-requests>=2.28.11.7",
    "pytest>=7.2.0,<8.0.0",
    "coverage>=7.0.4",
    "ipykernel>=6.19.4",
    "genson>=1.2.2",
    "line-profiler>=4.0.2",
    "pytest-lazy-fixture>=0.6.3",
    "freezegun>=1.2.2",
    "pytest-mock>=3.10.0",
    "genbadge[all]>=1.1.0",
    "pytest-html>=3.2.0",
    "sphinx>=6.1.3",
    "ipython>=8.9.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-immaterial>=0.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splatnet3_scraper"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "D",      # pydocstyle (Google convention)
]
ignore = [
    "E203",   # whitespace before ':'
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D205",   # blank line required between summary and description
    "D212",   # multi-line summary first line
    "D415",   # first line should end with punctuation
    "D417",   # missing argument description in docstring
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**" = ["D", "F401", "F811", "F841", "E712"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["splatnet3_scraper"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
exclude = [".venv", "tests", "docs", "examples"]
reportMissingImports = false
reportGeneralTypeIssues = false
reportCallIssue = false
reportArgumentType = false
reportReturnType = false
reportAssignmentType = false
reportTypedDictNotRequiredAccess = false
reportOperatorIssue = false

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
    "-k not production",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests as requiring internet access (deselect with '-m \"not internet\"')",
    "production: marks tests as only running in production (deselect with '-m \"not production\"')",
]
pythonpath = [
    "src"
]
